--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <div class="yellow-flag">
                             <div class="row" style="width: 100%;">
                                 <div class="col-4" style="text-align: center;">
-                                    <span style="color: yellow;font-size: 50px;">⓵</span>
+                                    <span style="color: yellow;font-size: 50px;">⚑</span>
                                 </div>
                                 <div class="col-8 mt-2">
                                     <p class="mb-0" style="font-size: 15px; color: #fff;"><b>Notes :</b>The current build has few minor issues which will not harm to product and can be updated to IDC.</p>
@@ -123,7 +123,7 @@
                         <div class="red-flag">
                             <div class="row" style="width: 100%;">
                                 <div class="col-4" style="text-align: center;">
-                                    <span style="color: red;font-size: 50px;">⓶</span>
+                                    <span style="color: red;font-size: 50px;">⚑</span>
                                 </div>
                                 <div class="col-8 mt-3">
                                     <p class="mb-0" style="font-size: 15px; color: #fff;"><b>Notes :</b>The current build has major issues and needs to be put on hold from the IDC update.</p>
@@ -133,7 +133,7 @@
                         <div class="green-flag">
                             <div class="row" style="width: 100%;">
                                 <div class="col-4" style="text-align: center;">
-                                    <span style="color: green;font-size: 50px;">⓷</span>
+                                    <span style="color: green;font-size: 50px;">⚑</span>
                                 </div>
                                 <div class="col-8 mt-3">
                                     <p class="mb-0" style="font-size: 15px; color: #fff;"><b>Notes :</b>The current build is validated in all the potential cases and is ready to be deployed in IDC.</p>
